docs/api/qiskit/0.35/qiskit.result.ProbDistribution.mdx
---
title: ProbDistribution (v0.35)
description: API reference for qiskit.result.ProbDistribution in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.result.ProbDistribution
---

# ProbDistribution

<Class id="qiskit.result.ProbDistribution" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/result/distributions/probability.py" signature="ProbDistribution(data, shots=None)" modifiers="class">
  Bases: `dict`

  A generic dict-like class for probability distributions.

  Builds a probability distribution object.

  **Parameters**

  *   **data** (*dict*) –

      Input probability data. Where the keys represent a measured classical value and the value is a float for the probability of that result. The keys can be one of several formats:

      > *   A hexadecimal string of the form `"0x4a"`
      > *   A bit string e.g. `'0b1011'` or `"01011"`
      > *   An integer

  *   **shots** (*int*) – Number of shots the distribution was derived from.

  **Raises**

  *   **TypeError** – If the input keys are not a string or int
  *   **ValueError** – If the string format of the keys is incorrect

  ## Methods

  <span id="qiskit-result-probdistribution-binary-probabilities" />

  ### binary\_probabilities

  <Function id="qiskit.result.ProbDistribution.binary_probabilities" signature="ProbDistribution.binary_probabilities(num_bits=None)">
    Build a probabilities dictionary with binary string keys

    **Parameters**

    **num\_bits** (*int*) – number of bits in the binary bitstrings (leading zeros will be padded). If None, the length will be derived from the largest key present.

    **Returns**

    **A dictionary where the keys are binary strings in the format**

    `"0110"`

    **Return type**

    dict
  </Function>

  <span id="qiskit-result-probdistribution-clear" />

  ### clear

  <Function id="qiskit.result.ProbDistribution.clear" signature="ProbDistribution.clear() → None. Remove all items from D." />

  <span id="qiskit-result-probdistribution-copy" />

  ### copy

  <Function id="qiskit.result.ProbDistribution.copy" signature="ProbDistribution.copy() → a shallow copy of D" />

  <span id="qiskit-result-probdistribution-fromkeys" />

  ### fromkeys

  <Function id="qiskit.result.ProbDistribution.fromkeys" signature="ProbDistribution.fromkeys(value=None, /)">
    Create a new dictionary with keys from iterable and values set to value.
  </Function>

  <span id="qiskit-result-probdistribution-get" />

  ### get

  <Function id="qiskit.result.ProbDistribution.get" signature="ProbDistribution.get(key, default=None, /)">
    Return the value for key if key is in the dictionary, else default.
  </Function>

  <span id="qiskit-result-probdistribution-hex-probabilities" />

  ### hex\_probabilities

  <Function id="qiskit.result.ProbDistribution.hex_probabilities" signature="ProbDistribution.hex_probabilities()">
    Build a probabilities dictionary with hexadecimal string keys

    **Returns**

    **A dictionary where the keys are hexadecimal strings in the**

    format `"0x1a"`

    **Return type**

    dict
  </Function>

  <span id="qiskit-result-probdistribution-items" />

  ### items

  <Function id="qiskit.result.ProbDistribution.items" signature="ProbDistribution.items() → a set-like object providing a view on D’s items" />

  <span id="qiskit-result-probdistribution-keys" />

  ### keys

  <Function id="qiskit.result.ProbDistribution.keys" signature="ProbDistribution.keys() → a set-like object providing a view on D’s keys" />

  <span id="qiskit-result-probdistribution-pop" />

  ### pop

  <Function id="qiskit.result.ProbDistribution.pop" signature="ProbDistribution.pop(k[, d]) → v, remove specified key and return the corresponding value.">
    If key is not found, d is returned if given, otherwise KeyError is raised
  </Function>

  <span id="qiskit-result-probdistribution-popitem" />

  ### popitem

  <Function id="qiskit.result.ProbDistribution.popitem" signature="ProbDistribution.popitem()">
    Remove and return a (key, value) pair as a 2-tuple.

    Pairs are returned in LIFO (last-in, first-out) order. Raises KeyError if the dict is empty.
  </Function>

  <span id="qiskit-result-probdistribution-setdefault" />

  ### setdefault

  <Function id="qiskit.result.ProbDistribution.setdefault" signature="ProbDistribution.setdefault(key, default=None, /)">
    Insert key with a value of default if key is not in the dictionary.

    Return the value for key if key is in the dictionary, else default.
  </Function>

  <span id="qiskit-result-probdistribution-update" />

  ### update

  <Function id="qiskit.result.ProbDistribution.update" signature="ProbDistribution.update([E, ]**F) → None. Update D from dict/iterable E and F.">
    If E is present and has a .keys() method, then does: for k in E: D\[k] = E\[k] If E is present and lacks a .keys() method, then does: for k, v in E: D\[k] = v In either case, this is followed by: for k in F: D\[k] = F\[k]
  </Function>

  <span id="qiskit-result-probdistribution-values" />

  ### values

  <Function id="qiskit.result.ProbDistribution.values" signature="ProbDistribution.values() → an object providing a view on D’s values" />
</Class>

